Fix design issues on mobile

--- a/ui/src/styles/components/_buttonsLayout.scss
+++ b/ui/src/styles/components/_buttonsLayout.scss
@@ -8,8 +8,15 @@
     padding: 0;
     margin: 0;
 
-    @media (max-width: 900px) {
+    @media (max-width: 1200px) {
         flex-direction: row;
+        justify-content: center;
+        margin: 8px 12px;
+    }
+
+    @media (max-width: 400px) {
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
         margin: 8px 12px;
     }
